<resources>
    <string name="app_name">Depth Of Field Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="pick_lens">Select a lens to use :</string>
    <string name="new_lens_make">ex. Canon</string>
    <string name="new_lens_focal_length">ex. 200 for 200mm</string>
    <string name="new_lens_aperture">ex. 2.8 for F2.8</string>
    <string name="lens_make">Make :</string>
    <string name="lens_aperture">Aperture :</string>
    <string name="lens_focal_length">Focal Length [mm] :</string>
    <string name="save_new_lens">Save</string>
    <string name="cancel_new_lens">Cancel</string>
    <string name="add_activity_name">Lens Details</string>
    <string name="calculate_activity_name">Calculate DoF</string>
    <string name="far_focal">Far Focal Distance :</string>
    <string name="near_focal">Near Focal Distance :</string>
    <string name="d_o_f"> Depth of Field :</string>
    <string name="hyperfocal">Hyperfocal Distance :</string>
    <string name="optional_features">Optional Features :\n1. App Bar Buttons\n3. Error Checking Input\n4. Auto-recalculate\n5. Save Data\n</string>
    <string name="display_lens">Photo details with</string>
    <string name="near_focal_result">Enter all values</string>
    <string name="far_focal_result">Enter all values</string>
    <string name="dof_result">Enter all values</string>
    <string name="hyperfocal_result">Enter all values</string>
    <string name="distance_hint">ex. 1.5 for 1.5m</string>
    <string name="aperture_hint">ex. 2.8 for F2.8</string>
    <string name="selected_aperture">Selected aperture :</string>
    <string name="subject_distance">Distance to subject [m] :</string>
    <string name="c_o_c">Circle of Confusion [m] :</string>
    <string name="default_coc">0.029</string>
    <string name="title_activity_add_lens">AddLens</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_calculate_d_o_f">CalculateDOF</string>
    <string name="back_to_main">Back</string>

</resources>